// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`One Question Test Should render Item correctly 1`] = `
<<<<<<< HEAD
<div>
  <Item__TopWrapper>
    <Item__QB>
      <Item__Q>
        Q:
      </Item__Q>
    </Item__QB>
    <Item__Helper>
      <div>
        Helpful?
      </div>
      <Item__Yes
        onClick={[Function]}
      >
        Yes
      </Item__Yes>
      <Item__Helpfulness>
        (undefined)
      </Item__Helpfulness>
      <div>
        |
      </div>
      <Item__AddAButton
        onClick={[Function]}
      >
        Add Answer
      </Item__AddAButton>
    </Item__Helper>
  </Item__TopWrapper>
  <Item__BottomWrapper>
    <Item__A>
      A:
    </Item__A>
    <Item__ListContainer>
      <AnswerList
        answers={
          Array [
            Object {
              "answerer_name": "sadf",
              "body": "asdf",
              "date": "2021-03-08T00:00:00.000Z",
              "helpfulness": 0,
              "id": 1443618,
              "photos": Array [
                "https://pngimg.com/uploads/mario/mario_PNG53.png",
                "https://pngimg.com/uploads/mario/mario_PNG53.png",
              ],
            },
            "asdf",
          ]
        }
      />
      <MoreA
        display={true}
        func={[Function]}
      />
    </Item__ListContainer>
  </Item__BottomWrapper>
</div>
`;

exports[`One Question Test Should render correctly 1`] = `
=======
>>>>>>> 02ee0ec6c214bf9bfe9c4a4496ac203921d04516
<div>
  <Item__TopWrapper>
    <Item__QB>
      <Item__Q>
        Q:
      </Item__Q>
    </Item__QB>
    <Item__Helper>
      <div>
        Helpful?
      </div>
      <Item__Yes
        onClick={[Function]}
      >
        Yes
      </Item__Yes>
      <Item__Helpfulness>
        (undefined)
      </Item__Helpfulness>
      <div>
        |
      </div>
      <Item__AddAButton
        onClick={[Function]}
      >
        Add Answer
      </Item__AddAButton>
    </Item__Helper>
  </Item__TopWrapper>
  <Item__BottomWrapper>
    <Item__A>
      A:
    </Item__A>
    <Item__ListContainer>
      <AnswerList
        answers={
          Array [
            Object {
              "answerer_name": "sadf",
              "body": "asdf",
              "date": "2021-03-08T00:00:00.000Z",
              "helpfulness": 0,
              "id": 1443618,
              "photos": Array [
                "https://pngimg.com/uploads/mario/mario_PNG53.png",
                "https://pngimg.com/uploads/mario/mario_PNG53.png",
              ],
            },
            "asdf",
          ]
        }
      />
      <MoreA
        display={true}
        func={[Function]}
      />
    </Item__ListContainer>
  </Item__BottomWrapper>
</div>
`;
